--- a/main.css
+++ b/main.css
@@ -1,17 +1,75 @@
 * {
   margin:0;
-  padding:0
+  padding:0;
+  list-style: none;
+  font-family: roboto;
+  color:#54585A;
 }
 
 body {
   background-color: #5ED4BF;
   text-align: center;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
 }
 
-.hidden {
-  display: none;
+.page__app-wrapper {
+  background-color: white;
+  width: 60%;
+  height: 70%;
+}
+
+/* header */
+.page__header {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #449E8E;
+}
+
+.header__logo-img {
+  width: 40px;
+  margin: 10px 20px;
+}
+
+.header__date-wrapper {
+  margin: 10px 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header__date__day {
+  margin: 0px 10px;
+  font-size: 30px;
+  color: #449E8E
+}
+
+.header__dates-wrapper {
+  text-align: start;
+}
+.date__day-week {
+  font-weight: 500;
+}
+.header__date__year {
+  font-weight: 100;
+  color:rgba(73, 76, 77, 0.445);
+}
+
+/* main */
+
+.checkbox {
+  color:blue;
+  border: 1px solid red;
 }
 
 .main__list-to-do {
   background-color: violet;
+}
+
+.hidden {
+  display: none;
 }
